fix: actualizar credenciales BD Hostinger

--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ NODE_ENV=production
 PORT=3000
 
 # Base de datos MySQL
-DB_HOST=127.0.0.1
+DB_HOST=srv1663.hstgr.io
 DB_PORT=3306
 DB_USER=u870508525_simba
-DB_PASSWORD=Machu1733*
+DB_PASSWORD=Casiolv10
 DB_NAME=u870508525_control_loteri
 
 # JWT - Autenticación
